<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="DM_APP_Name">ZoomGo Media</string>
    <string name="DM_MDNS_Scan_Ing">Scanning for available devices…</string>
    <string name="DM_MDNS_Network_Error">Network error, please try to reconnect Wi-Fi or restart the ZoomGo device!</string>
    <string name="DM_MDNS_Disconect_WiFi">ZoomGo Wi-Fi not connected. Please connect to the ZoomGo Wi-Fi network.</string>
    <string name="DM_MDNS_Connection">Connected to ZoomGo </string>
    <string name="DM_MDNS_Scan_None">No available devices detected, please rescan</string>
    <string name="DM_MDNS_rescan_Button">Rescan</string>
    <string name="DM_MDNS_how_to_check_Title">No available devices detected</string>
    <string name="DM_MDNS_how_to_check_0">Please try the following:</string>
    <string name="DM_MDNS_how_to_check_1">Please check if your ZoomGo device is powered on</string>
    <string name="DM_MDNS_how_to_check_2">Please check if your phone/tablet has connected to the ZoomGo WiFi network</string>
    <string name="DM_MDNS_how_to_check_3">Please make sure you’re not too far away from your ZoomGo device</string>
    <string name="DM_MDNS_how_to_check_4">Please check if ZoomGo is fully charged</string>
    <string name="DM_MDNS_No_Disk">Cannot access SD card, please check the card is correctly inserted</string>
    <string name="DM_Remind_Operate_No_Disk">No access to SD card, please check the device status and try again.</string>
    <string name="DM_MDNS_Disk_Connect_PC">ZoomGo is connected to a computer, you will be temporarily unable to access device files</string>
    <string name="DM_MDNS_Disk_Connect_PC_2">Your device is connected to a computer - please disconnect it from the computer and try again</string>
    <string name="DM_Bottom_Bar_Button_MyDowmloads">My Downloads</string>
    <string name="DM_Bottom_Bar_Button_Menu">Menu</string>
    <string name="DM_Disk_Device_Connect_Succ_Ssid">Connected to %s</string>
    <string name="DM_Disk_Dialog_Select_Device">Select device</string>
    <string name="DM_Fileexplore_Disk_Alarm">Storage has changed</string>
    <string name="DM_Siderbar_Device_SSID">%s</string>
    <string name="DM_Siderbar_Capacity">%1$s/%2$s</string>
    <string name="DM_Siderbar_WiFi_Connect">Wi-Fi</string>
    <string name="DM_Siderbar_Connect_Internet">Internet</string>
    <string name="DM_Sidebar_Unconnect">Disconnected</string>
    <string name="DM_SetUI_Device_Wireless_Closed">Off</string>
    <string name="DM_Sidebar_MyDownloads">My Downloads</string>
    <string name="DM_Sidebar_DropBox">DropBox</string>
    <string name="DM_Sidebar_HelpCenter">Help Center</string>
    <string name="DM_Sidebar_PhoneBackup">Mobile Device Backup</string>
    <string name="DM_Sidebar_APP_Version">App Version：%s</string>
    <string name="DM_Sidebar_FW_Version">Firmware Version：%s</string>
    <string name="DM_Sidebar_Set">Settings</string>
    <string name="DM_Set_WiFi_Setting">Device Wi-Fi Settings</string>
    <string name="DM_WiFi_Set_Section_0">Please reconnect to ZoomGo Wi-Fi after changing this setting</string>
    <string name="DM_Error_SSID_Short">SSID length error</string>
    <string name="DM_Error_PWD_Short">Password must be at least 8 characters</string>
    <string name="DM_Error_PWD_empty">The password is not complete</string>
    <string name="DM_Error_No_Change">No data changed</string>
    <string name="DM_Set_Advanced_Set">Advanced Settings</string>
    <string name="DM_Set_Clear_Cache">Clear Cache</string>
    <string name="DM_Remind_Clear_Wait">Clearing…</string>
    <string name="DM_Set_Check_APP_Update">Check for App updates</string>
    <string name="DM_Set_Check_FW_Update">Check for Firmware updates</string>
    <string name="DM_Set_Feedback">Feedback</string>
    <string name="DM_Feedback_Message">Your feedback is highly appreciated</string>
    <string name="DM_Feedback_Contact">Please enter your phone number and email address we can get in touch</string>
    <string name="DM_Remind_Feedback_Success">Your feedback has been submitted</string>
    <string name="DM_Remind_Feedback_Failed">Feedback submission failed, please try agian.</string>
    <string name="DM_Remind_Set_DeleteCache">Clear the file cache?</string>
    <string name="DM_Update_Info">Update to new version：%s？</string>
    <string name="DM_Update_Sure">OK</string>
    <string name="DM_Update_No">Cancel</string>
    <string name="DM_Setting_Update_Download_Title">Download</string>
    <string name="DM_Remind_Set_NoUpdate">You already have the latest version</string>
    <string name="DM_setting_update_content">Version code:%1$s \nUpdated content:%2$s</string>
    <string name="DM_setting_update_info_Error">Failed to obtain update information, please try again</string>
    <string name="DM_setting_remote_upgrade_ask">New firmware %s is available, update now?</string>
    <string name="DM_setting_upgrade_downloading">Firmware update in progress…</string>
    <string name="DM_setting_upgrade_warn">Warning!</string>
    <string name="DM_setting_upgrade_fail_network_disconnect">Upgrade failed - Internet connetion dropped</string>
    <string name="DM_setting_upgrade_fail_get_error">Upgrade failed - firmware error</string>
    <string name="DM_setting_upgrade_fail_device_disconnect">Upgrade failed - device connection dropped</string>
    <string name="DM_setting_upgrade_fail_low_power">Battery low - upgrade has been canceled. Please make sure the device has at least 50% battery life before updating.</string>
    <string name="DM_setting_upgrade_fail_illegal_fw">Upgrade failed - invalid firmware</string>
    <string name="DM_setting_getotaupgrade_is_the_latest_version">You already have the latest version</string>
    <string name="DM_setting_getotaupgrade_no_support_online_update">Over The Air upgrade is not supported on current firmware version</string>
    <string name="DM_setting_getotaupgrade_no_wifi_tips">\nYou are connected to a metered network - firmware upgrade will consume cellular data.</string>
    <string name="DM_setting_getotaupgrade_successful_tips">Tips</string>
    <string name="DM_setting_getotaupgrade_successful_tips_content">Update completed, please reconnect to device Wi-Fi</string>
    <string name="DM_setting_getotaupgrade_no_network">No Internet connection</string>
    <string name="DM_setting_otaupgrade">Check for Firmware updates</string>
    <string name="DM_setting_getotaupgrade_tips_content">Warning: Do not power off the device during the update process, doing so may damage the system. Make sure the device is plugged in. Do not use the device until the update process is complete.\nPlease stay connected to the network during the update process.\nContinue?</string>
    <string name="DM_setting_getotaupgrede_yes">Yes</string>
    <string name="DM_setting_getotaupgrede_no">No</string>
    <string name="DM_setting_getotaupgrade_server_access_fails">No new version available</string>
    <string name="DM_UMUpdate_Break_Network">No Internet connection</string>
    <string name="DM_File_Manager_Document">My Documents</string>
    <string name="DM_File_Manager_Image">My Pictures</string>
    <string name="DM_File_Manager_Music">My Music</string>
    <string name="DM_File_Manager_Video">My Videos</string>
    <string name="DM_Control_Mobile_MyDownloads">My Downloads</string>
    <string name="DM_Control_Wireless_Resource">ZoomGo</string>
    <string name="DM_disk_Manager_Builtin_Storage">Internal storage</string>
    <string name="DM_disk_Manager_Builtout_Storage">External storage</string>
    <string name="DM_Capacity_Sum_Size">Total</string>
    <string name="DM_Capacity_Free_Size">Free</string>
    <string name="DM_Navigation_Airdisk_Catalogue">ZoomGo Catalog</string>
    <string name="DM_Navigation_Airdisk_Categories">ZoomGo Categories</string>
    <string name="DM_Bottom_Bar_Button_Upload">Upload</string>
    <string name="DM_No_File">No Files</string>
    <string name="DM_Remind_Notconnect_Device">Device not connected</string>
    <string name="DM_Control_Video">Video</string>
    <string name="DM_Control_Image">Picture</string>
    <string name="DM_Control_Document">Document</string>
    <string name="DM_Control_Music">Music</string>
    <string name="DM_Picgroup_Arrange_Album">Album</string>
    <string name="DM_Picgroup_Arrange_Time">Date</string>
    <string name="DM_Remind_Operate_Scan_External">Scanning external disk data，please wait…</string>
    <string name="DM_Remind_Operate_Scan_Done">Scan complete - please refresh to update data.</string>
    <string name="DM_Remind_Operate_Scan_Data">Scanning data…</string>
    <string name="DM_Upload_Remind_Choose">Please choose a file type</string>
    <string name="DM_Upload_Type_Pictures">Pictures</string>
    <string name="DM_Upload_Type_Videos">Videos</string>
    <string name="DM_Upload_Type_Music">Music</string>
    <string name="DM_Navigation_Upload_Pictures">Upload Pictures</string>
    <string name="DM_Navigation_Upload_Music">Upload Music</string>
    <string name="DM_Navigation_Upload_Videos">Upload Videos</string>
    <string name="DM_Navigation_Upload_Files">Upload Files</string>
    <string name="DM_Navigation_Upload_Num">Selected %s items</string>
    <string name="DM_Bottom_Bar_Button_Uploadto">Upload to: %s</string>
    <string name="DM_Bottom_Bar_Button_BeginUpload">Begin upload (%s)</string>
    <string name="DM_Navigation_Upload_Path">Choose target path</string>
    <string name="DM_Bottom_Bar_Button_Confirm">OK</string>
    <string name="DM_Remind_Operate_Upload_Success">Upload complete</string>
    <string name="DM_Remind_Operate_Upload_Done">%1$s Files have been uploaded to:\n%2$s</string>
    <string name="DM_Remind_Operate_Upload_Failed">Upload failed - please try again</string>
    <string name="DM_Task_Download_Mobile">Download </string>
    <string name="DM_Task_Copy">Copy to</string>
    <string name="DM_Task_Delete">Delete</string>
    <string name="DM_Task_Rename">Rename</string>
    <string name="DM_Task_Share">Share</string>
    <string name="DM_Task_Open_By">Open with third-party app</string>
    <string name="DM_Remind_Operate_Open_By">File must be loaded before opening using a third-party app.\nLoad now?</string>
    <string name="DM_Remind_Operate_Open_By_Fail">Loading failed - please try again</string>
    <string name="DM_Task_Details">Properties</string>
    <string name="DM_Remind_Operate_SameFile">The target folder contains a file with the same name:\n%s</string>
    <string name="DM_Task_Confirm_Operate">Do the same for all files with the same name?</string>
    <string name="DM_Task_Confirm_Rename">Reserve </string>
    <string name="DM_Task_Confirm_Jump">Skip</string>
    <string name="DM_Control_Definite">OK</string>
    <string name="DM_Control_Cancel">Cancel</string>
    <string name="DM_Control_Know">OK</string>
    <string name="DM_Control_Select">All</string>
    <string name="DM_Control_Uncheck_All">Cancel</string>
    <string name="DM_Remind_Operate_Delete_File">Delete selected files?</string>
    <string name="DM_Remind_Operate_Delete_Wait">Deleting…</string>
    <string name="DM_Remind_Operate_Delete_Success">Deleted</string>
    <string name="DM_Remind_Operate_Delete_Success_Pass">%s files in use and have been skipped</string>
    <string name="DM_Remind_Operate_Delete_Failed">Failed to delete - please try again</string>
    <string name="DM_Remind_Operate_Stop">Operation has been terminated</string>
    <string name="DM_Remind_Loading">Loading…</string>
    <string name="DM_Remind_Operate_Local_NoSize">Insufficient phone memory - please clean up and try again</string>
    <string name="DM_MDNS_Connect_WiFi_Button">Connect to ZoomGo Wi-Fi</string>
    <string name="DM_FeedBack_Send">Send</string>
    <string name="DM_Control_More_Edit">Edit</string>
    <string name="DM_Control_More_New">New</string>
    <string name="DM_Control_More_Sort">Sort</string>
</resources>