<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:lib="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/searching"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@color/file_view_bkg_color"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="visible" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="10.0dip"
            android:text="@string/DM_MDNS_Scan_Ing"
            android:textColor="#555555"
            android:textSize="20.0sp" />

        <com.dmsys.airdiskpro.view.loadingBall.BallView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:layout_marginTop="80dp"
            lib:ball_colors="@array/colors"
            lib:balls="3"
            lib:enable_size_animation="true"
            lib:max_ball_size="12dp"
            lib:min_ball_size="5dp"
            lib:movement_cycle_time="1500"
            lib:size_cycle_time="500" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/nodevice"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@color/file_view_bkg_color"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="visible" >

        <TextView
            android:id="@+id/message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="10.0dip"
            android:gravity="center_horizontal"
            android:text="@string/DM_MDNS_Disconect_WiFi"
            android:textColor="#161616"
            android:textSize="17.0sp" />

        <Button
            android:id="@+id/connect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30.0dip"
            android:background="@drawable/green_btn_bg_selector"
            android:gravity="center"
            android:paddingBottom="10dp"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            android:paddingTop="10dp"
            android:text="@string/DM_MDNS_Connect_WiFi_Button"
            android:textColor="@color/color_sliding_menu_text" />

        <ImageView
            android:id="@+id/img_guide"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:src="@drawable/connect_guide_noconnect" />

        <LinearLayout
            android:id="@+id/layout_tip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:orientation="vertical" >

            <TextView
                style="@style/help_step_text_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:drawableLeft="@drawable/help_step_one"
                android:drawablePadding="20dp"
                android:text="@string/DM_MDNS_how_to_check_1"
                android:textColor="#706F6F" />

            <TextView
                style="@style/help_step_text_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/help_step_two"
                android:drawablePadding="20dp"
                android:layout_marginTop="25dp"
                android:text="@string/DM_MDNS_how_to_check_2"
                android:textColor="#706F6F" />

            <TextView
                style="@style/help_step_text_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/help_step_three"
                android:drawablePadding="20dp"
                android:layout_marginTop="25dp"
                android:text="@string/DM_MDNS_how_to_check_3"
                android:textColor="#706F6F" />

            <TextView
                android:visibility="gone"
                style="@style/help_step_text_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/help_step_four"
                android:drawablePadding="20dp"
                android:layout_marginTop="25dp"
                android:text="@string/DM_MDNS_how_to_check_4"
                android:textColor="#706F6F" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>