<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@color/dm_lib_whitesmoke"
    android:paddingLeft="15dp"
    android:paddingRight="30dp"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/item_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/edit_btn_selector"
        android:drawablePadding="20dp"
        android:gravity="center"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"
        android:text="@string/DM_Control_More_Edit"
        android:textColor="#333333"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/item_sort"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/sort_btn_selector"
        android:drawablePadding="20dp"
        android:gravity="center"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"
        android:text="@string/DM_Control_More_Sort"
        android:textColor="#333333"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/item_newfolder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/new_folder_selector"
        android:drawablePadding="20dp"
        android:gravity="center"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"
        android:text="@string/DM_Control_More_New"
        android:textColor="#333333"
        android:textSize="16sp" />

</LinearLayout>